--- a/characterRecognizer.ipynb
+++ b/characterRecognizer.ipynb
@@ -10,21 +10,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cc99ea5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from keras import layers, models, optimizers, losses, metrics\n",
-    "from keras import utils  # when using image_dataset_from_directory, try utils.image_dataset_from_directory\n",
+    "import keras\n",
+    "from keras import layers, models, optimizers\n",
+    "from keras import callbacks \n",
+    "from keras.src.callbacks import EarlyStopping, ModelCheckpoint\n",
     "import numpy as np\n",
-    "import os"
+    "import matplotlib.pyplot as plt\n",
+    "import json\n",
+    "import os\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import classification_report, confusion_matrix"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f5d7cc66",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "572002ac",
+   "metadata": {},
+   "source": [
+    "### Model Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b8a3cae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a bunch of different model classes here with different layers\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1200743",
+   "metadata": {},
+   "source": [
+    "### Compiling Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b71f78a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a bunch of compiling classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ba82e88",
+   "metadata": {},
+   "source": [
+    "### Early Stopping Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88132782",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a bunch of early stopping oslasses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c43de14e",
    "metadata": {},
    "source": [
     "---"
@@ -45,17 +113,11 @@
    "source": [
     "Train Model on Eyes Only Images\n",
     "\n",
-    "Remember to increase your dataset by using something like ImageDataGenerator in Keras to flip and rotate your images."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "755bbab3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Eyes Only Python Code goes here (Training AND Validation)"
+    "Remember to increase your dataset by using something like ImageDataGenerator in Keras to flip and rotate your images.\n",
+    "\n",
+    "- Include a No Mcs Found Category with just the background\n",
+    "\n",
+    "- remember to set the Early Stopping Call Back and use restore_best_weights ALWAYS!!"
    ]
   },
   {
@@ -64,6 +126,16 @@
    "metadata": {},
    "source": [
     "Have Model Predict based on Eyes Only Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11d63077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eyes Only Python Code goes here (Training AND Validation)\n"
    ]
   },
   {
@@ -117,12 +189,13 @@
    "source": [
     "Train Model on Headshot Only Images\n",
     "\n",
-    "Remember to increase your dataset by using something like ImageDataGenerator in Keras to flip and rotate your images."
+    "Remember to increase your dataset by using something like ImageDataGenerator in Keras to flip and rotate your images.\n",
+    "- remember to set the Early Stopping Call Back and use restore_best_weights ALWAYS!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "72dc4ba9",
    "metadata": {},
    "outputs": [],
@@ -140,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "783a5afa",
    "metadata": {},
    "outputs": [],
@@ -158,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6d51bed0",
    "metadata": {},
    "outputs": [],
@@ -189,7 +262,9 @@
    "source": [
     "Train Model on Full Body Images only\n",
     "\n",
-    "Remember to increase your dataset by using something like ImageDataGenerator in Keras to flip and rotate your images."
+    "Remember to increase your dataset by using something like ImageDataGenerator in Keras to flip and rotate your images.\n",
+    "\n",
+    "- remember to set the Early Stopping Call Back and use restore_best_weights ALWAYS!!"
    ]
   },
   {
@@ -263,7 +338,11 @@
     "\n",
     "- Include Background Only AKA No Character Images so it knows what No Characters mean\n",
     "\n",
-    "Remember to increase your dataset by using something like ImageDataGenerator in Keras to flip and rotate your images.\n"
+    "- Remember to increase your dataset by using something like ImageDataGenerator in Keras to flip and rotate your images.\n",
+    "\n",
+    "- Use the labelmaker.sh script to get the .txt files\n",
+    "\n",
+    "- remember to set the Early Stopping Call Back and use restore_best_weights ALWAYS!!"
    ]
   },
   {
@@ -315,6 +394,44 @@
    "outputs": [],
    "source": [
     "# SAVE the Multi-Label Model once the training results look good."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57fe2e29",
+   "metadata": {},
+   "source": [
+    "### Training Metrics\n",
+    "\n",
+    "- Generate Classification Reports and Confusion Matrix\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "```\n",
+    "# Classification Report\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(true_classes, predicted_classes, target_names=class_labels))\n",
+    "\n",
+    "# Confusion Matrix\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "cm = confusion_matrix(true_classes, predicted_classes)\n",
+    "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=class_labels, yticklabels=class_labels)\n",
+    "plt.xlabel('Predicted Label')\n",
+    "plt.ylabel('True Label')\n",
+    "plt.title('Confusion Matrix')\n",
+    "plt.show()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9587ee20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training Metrics"
    ]
   },
   {
